Fixed visibility of Graph items according to selection

--- a/ObjectManagementSystemFrontend/Components/GraphComponent.razor.css
+++ b/ObjectManagementSystemFrontend/Components/GraphComponent.razor.css
@@ -2,3 +2,18 @@
     height: 600px;
     width: 600px;
 }
+
+::deep #graph-wrapper {
+    height: 600px;
+    width: 600px;
+}
+
+::deep .node[data-node-id=" 5813b224-99e0-4d6e-a790-476ab12ba09b"] > div {
+    color: red;
+    background-color: green;
+}
+
+::deep .selected {
+    color: #1151f3;
+    background-color: #e7e7fb;
+}
